[workspace.package]
authors = [ "PaNDa2code" ]
version = "0.0.0"

[workspace]
members = [ 
  "console_session",
  "circular_buffer",
  "main_app",
]
resolver = "2"

[workspace.dependencies]
windows = { version = "0.59.0", features = [
  "Win32_System_Memory", 
  "Win32_System_SystemInformation", 
  "Win32_Security", 
  "Win32_Storage_FileSystem", 
  "Win32_System_Pipes",
  "Win32_System_Console",
  "Win32_System_Threading"
] }
